--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
     </footer>
     <script defer src="script.js"></script>
     <script src="https://kit.fontawesome.com/34344b8697.js" crossorigin="anonymous"></script>
+    <!-- Met fontawesome kan ik iconen gebruiken op mijn website-->
     <!-- link van website om producten naast elkaar te swipen-->
     <!-- Het importeren van het swiper.js library via hun website-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
